// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The <Text /> Component with custom content matches the snapshot 1`] = `
<div>
  <div>
    <h1>
      Test Content
    </h1>
  </div>
</div>
`;

exports[`The <Text /> Component with custom content matches the snapshot 2`] = `
<div>
  <div>
    Test Content
  </div>
</div>
`;

exports[`The <Text /> Component with custom content matches the snapshot 3`] = `
<div>
  <div>
    <p>
      Test Content
    </p>
  </div>
</div>
`;

exports[`The <Text /> Component with default props matches the snapshot 1`] = `
<div>
  <div>
    Lorem Ipsum
  </div>
</div>
`;

exports[`The <Text /> Component with empty content matches the snapshot 1`] = `<div />`;
